--- a/readme
+++ b/readme
@@ -49,4 +49,4 @@ ___________________________________
 | 9 3 4  | 6 7 2  | 5 1 8  | 
 +==========================+
 
-Keep in mind that this code may not be great or optimal, it's just something I made in my free time as a practice. I'm still learning :).
+Keep in mind that this code may not be optimal, it's just something I made in my free time as a practice. I'm still learning :).
